# gen-pdf

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
build_pdf/blocks/: base.py  columns.py  container.py  grid.py  icon.py  image.py  row.py  text.py
examples/: 01_simple_text.py  02_multipage.py  03_tables.py  04_containers.py  05_invoice.py  06_colored_pages.py  07_font_showcase.py  README.md
gen_pdf/: __init__.py  document.py
gen_pdf/blocks/: __init__.py  base.py  columns.py  container.py  grid.py  icon.py  image.py  row.py  svg.py  text.py
