[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-pdf"
version = "0.1.0"
description = "PDF Generation Library"
readme = "README.md"
authors = [
  { name = "Try3D" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "charset-normalizer==3.4.4",
    "cssselect2==0.8.0",
    "freetype-py==2.5.1",
    "lxml==6.0.2",
    "pillow==11.3.0",
    "pycairo==1.29.0",
    "reportlab==4.4.9",
    "rlPyCairo==0.4.0",
    "svglib==1.6.0",
    "tinycss2==1.5.1",
    "webencodings==0.5.1",
]

[project.urls]
"Homepage" = "https://github.com/try3d/gen-pdf"
"Bug Tracker" = "https://github.com/try3d/gen-pdf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gen_pdf*"]
